--- a/BH.SPA/src/app/pages/hippomanager/hippomanager.component.html
+++ b/BH.SPA/src/app/pages/hippomanager/hippomanager.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <div class="row">
         <div class="col-lg-12 col-md-12">
-          <div *ngIf="hippos.length > 0" class="card">
+          <div *ngIf="hippos" class="card">
             <div class="card-header">
               <h2 class="title d-inline">Hippos</h2>
             </div>
